--- a/public/css/index.css
+++ b/public/css/index.css
@@ -19,14 +19,14 @@ h1 {
   color: blue;
 }
 /* {{! Завдання 6. Зробіть, щоб тег p мав червоний фон ,а тег div мав зелений фон  }} */
-section div p {
+.box p {
   background-color: red;
 }
-section div {
+.box div {
   background-color: green;
 }
 /* {{! Завдання 7. Задайте класу green зелений фон та білий колір тексту, використовуйте селектор класу  }} */
-.green {
+section.green {
   background-color: green;
   color: white;
 }
@@ -35,7 +35,7 @@ ul > li {
   background-color: red;
 }
 /* {{! Завдання 9. Зробіть червоний фон для тегів, які є сестринськими відносно тега button з класом header-button }} */
-button + span {
+button.header-button + span {
   background-color: red;
 }
 /* <!--  Завдання 10. Зробіть синій фон для всіх cусідських тегів <p>, тегу який має клас 'susid' , а текст білим застосувавши сусідський селектор  --> */
@@ -50,27 +50,27 @@ button + span {
 }
 /* УРОК 2 */
 /* Завдання №1: Для першого елементу списку зробіть колір тексту білим */
-li:first-child {
+.first-task li:first-child {
   color: white;
 }
 /* Завдання №2:  Змінити колір тексту першого елемента списку в першому блоці ul на жовтий */
-ul:first-child li:first-child {
+.second-task ul:first-child li:first-child {
   color: yellow;
 }
 /* Завдання №3:   Змінити фон першого елементу на жовтий в другому блоку ul на жовтий */
-ul + ul li:first-child {
+.third-task ul + ul li:first-child {
   background-color: yellow;
 }
 /* Завдання №4:  Змінити фон останнього елементу списку на жовтий. */
-li:last-child {
+.four-task li:last-child {
   background-color: yellow;
 }
 /* Завдання №5: Змінити колір тексту останнього елемента списку в останньому блоці ul на білий */
-ul + ul li:last-child {
+.five-task ul + ul li:last-child {
   color: white;
 }
 /* Завдання №6: Змінити колір тексту на червоний у блоках div, які єдині в своєму батьківському елементі section */
-div:only-child {
+.only-child-task div:only-child {
   color: red;
 }
 /* Завдання №7:  Застосуйте червоний фон до першого абзацу в div з классом seven-task */
@@ -82,67 +82,67 @@ div:only-child {
   background-color: red;
 }
 /* Завдання №9: Застосуйте жовтий фон для всіх <p> елементів, якщо в батьківському елементі більше не має <p>. */
-p:only-of-type {
+.nine-task p:only-of-type {
   background-color: yellow;
 }
 /* УРОК 3 */
 /* Завдання №1.  Зайдайте білий колір тексту всім посиланням які мають атрибут href */
-a[href] {
+.lesson-three-task-one a[href] {
   color: white;
 }
 /* Завдання №2. Зайдайте жовтий колір тексту всім елементам списку які мають атрибут value */
-li[value='1'] {
+.lesson-three-task-two li[value='1'] {
   color: yellow;
 }
 /* Завдання №3. Застосуйте селектор значення атрибута  щоб встановити червоний фон всім елементам списку які мають атрибут 
    value зі значенням '3 */
-li[value='3'] {
+.lesson-three-task-three li[value='3'] {
   background-color: red;
 }
 /* Завдання №4. Застосуйте селектор наявності значення атрибута,
     щоб встановити синій фон для кнопки з класом "primary" */
-button[class~='primary'] {
+.lesson-three-task-four button[class~='primary'] {
   background-color: blue;
 }
 /* Завдання №5. Надайте червоний фон всім кнопка назви класу яких починаються зі слова secondary  */
-button[class|='secondary'] {
+.lesson-three-task-five button[class|='secondary'] {
   background-color: red;
 }
 /* Завдання №6.  Застосуйте cелектор початку значення атрибута, щоб стилізувати тільки ті елементи списку,
    класи яких починаються на "b" та встановіть для них зелений колір тексту та білий фон.  */
-li[class^='b'] {
+.lesson-three-task-six li[class^='b'] {
   color: green;
   background-color: white;
 }
 /* Завдання №7. Застосуйте селектор кореня значення атрибута, щоб стилізувати тільки ті елементи списку,
   в назві класів яких зустрічається 'on' та встановіть для них зелений колір тексту та білий фон */
-li[class*='on'] {
+.lesson-three-task-seven li[class*='on'] {
   color: green;
   background-color: white;
 }
 /* Завдання №8. Напишіть CSS-код, який за допомогою конструкції селектор кінцівки значення атрибута виділить червоним фоном елементи ,
   які мають в кінці назви класу літеру "s". */
-span[class$='s'] {
+.lesson-three-task-eight span[class$='s'] {
   background-color: red;
 }
 /* Завдання №9. Зробіть першу букву заголовків червоним кольором. */
-h2::first-letter,
-h3::first-letter {
+.lesson-three-task-nine h2::first-letter,
+.lesson-three-task-nine h3::first-letter {
   color: red;
 }
 /* Завдання №10. Задайте першому рядку жовтий фон. */
-div::first-line {
+.lesson-three-task-ten::first-line {
   background-color: yellow;
 }
 /* Завдання №11. Задайте червоний фон плейсхолдера для інпут-поля. */
-input::placeholder {
+.lesson-three-task-eleven input::placeholder {
   background: red;
 }
 /* Завдання №12. Додайте "➤" перед кожним елементом списку; */
-li::before {
+.lesson-three-task-twelve li::before {
   content: '➤';
 }
 /* Завдання №13. Додайте "➤" після кожного елемента списку; */
-li::after {
+.lesson-three-task-thirteen li::after {
   content: '➤';
 }
